--- a/src/pages/DocumentApproval/style.scss
+++ b/src/pages/DocumentApproval/style.scss
@@ -6,7 +6,6 @@
         height: 200px;
         border: 2px solid black;
         border-radius: 20px;
-        /* Điều này tạo ra các góc bo tròn */
         position: relative;
     }
 
@@ -23,11 +22,29 @@
 
     .box::before {
         border-radius: 100% 0 0 0;
-        /* Góc trái trên */
     }
 
     .box::after {
         border-radius: 0 100% 0 0;
-        /* Góc phải trên */
+    }
+}
+
+.documentApproval-createDateCss {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &:hover {
+        background-color: #fafafa;
+
+    }
+
+    .documentApproval-createDateCss-child {
+        color: #fff;
+        width: 70%;
+        min-Width: 80px;
+        position: relative;
+        padding-Right: 10px;
+
     }
 }
