--- a/src/components/ModalSignature/style.scss
+++ b/src/components/ModalSignature/style.scss
@@ -3,12 +3,15 @@
     .ant-upload-wrapper.ModalSignature__Upload {
         display: flex;
         justify-content: center;
+
         width: 100%;
         height: 100%;
 
         .ant-upload-list.ant-upload-list-picture-card {
             display: flex;
             justify-content: center;
+            align-items: center;
+
             width: 100%;
             height: 100%;
 
