--- a/src/components/ModalSignature/style.scss
+++ b/src/components/ModalSignature/style.scss
@@ -9,6 +9,8 @@
         .ant-upload-list.ant-upload-list-picture-card {
             display: flex;
             justify-content: center;
+            align-items: center;
+
             width: 100%;
             height: 100%;
 
