--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -80,9 +80,7 @@
             }
 
         }
-
     }
-
 }
 
 @media (min-width:768px) {
@@ -140,6 +138,13 @@
                 padding-right: 10px;
                 padding-top: 8px;
                 padding-bottom: 10px;
+            }
+
+            .header-iconMobile {
+                >a {
+                    color: #fff;
+
+                }
             }
 
             .header-user {
