--- a/src/components/ButtonDropdown/style.scss
+++ b/src/components/ButtonDropdown/style.scss
@@ -47,4 +47,30 @@
         }
     }
 
+
+}
+
+.NotificationIcon {
+    MARGIN-BOTTOM: -5PX;
+    height: 27px;
+    width: 22px;
+
+    .BellNotification {
+        align-items: center;
+        // padding-bottom: 10px;
+        color: #fff;
+        position: absolute;
+
+    }
+
+    .CountNotification {
+        position: absolute;
+        font-size: 10px;
+        background: red;
+        right: 0;
+        width: 20px;
+        /* height: 15px; */
+        text-align: center;
+        border-radius: 81%;
+    }
 }
